# Multi-Camera

./: .gitignore  ego_exo4d_create_dataset.py  evaluate.py  postprocess.py  pyproject.toml  run_qa_build.sh  vqa.py
agibot/: create_dataset.py  question_generator.py
agibot/prompts/: ordering.txt  summarization.txt  temporal.txt
datasetbuilder/: install_deps.sh  nuscens_build.py
datasetbuilder/notebooks/: datavisualizer.ipynb
datasetbuilder/prompts/: counting_questions.txt  ordering.txt  spatial_questions.txt  temporal.txt
ego_exo4d/: create_dataset.py  dataset_old.py  llm.py  question_generator.py  randomize_choices.py
ego_exo4d/prompts/: camera.txt  causal.txt  ordering.txt  summarization.txt  temporal.txt
inputs/: MEVA
meva/: .gitignore  1_run_all_slots.sh  2_run_naturalize_all_slots.sh  3_convert_naturalized_to_standard.sh  QUICKSTART.md  run.sh
meva/data/: annotated_activity_slots.txt  canonical_slots.json  geom_slot_index.json  mevid_supported_slots.json  person_database.json  person_database_yolo.json  slot_index.json  slot_list_from_slot_index.txt
meva/docs/: V6_PIPELINE_EXPLAINED.md  V7_FAQ.md  multi_camera_reference.md  (+1 more)
scripts/: caption_waymo.py  egoexo.py
shared/: graph.py  vlm_vqa_ablation.py  waymo_convert_to_mp4.py
vqa/: stitched_Qwen_Qwen2.5-VL-7B-Instruct_camera.json  stitched_Qwen_Qwen2.5-VL-7B-Instruct_causal.json  stitched_Qwen_Qwen2.5-VL-7B-Instruct_event_ordering.json  uniform_Qwen_Qwen2.5-VL-7B-Instruct_camera.json  uniform_Qwen_Qwen2.5-VL-7B-Instruct_causal.json  uniform_Qwen_Qwen2.5-VL-7B-Instruct_event_ordering.json  vqa.py
(+142 files in other folders)
